--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "dev:api": "npm run dev --workspace=chat-ai-api",
     "dev:ui": "npm run dev --workspace=chat-ai-ui",
     "dev": "npm-run-all --parallel dev:*",
-    "build": "npm run build --workspaces",
-    "lint": "npm run lint --workspaces"
+    "build:api": "npm run build --workspace=chat-ai-api",
+    "build:ui": "npm run build --workspace=chat-ai-ui",
+    "build": "npm-run-all build:*",
+    "start:api": "npm run start --workspace=chat-ai-api",
+    "start:ui": "npm run start --workspace=chat-ai-ui",
+    "start": "npm-run-all --parallel start:*",
+    "test": "npm run test --workspaces"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
