--- a/chat-ai-api/package.json
+++ b/chat-ai-api/package.json
@@ -18,12 +18,14 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "openai": "^4.93.0",
-    "stream-chat": "^8.59.0"
+    "stream-chat": "^8.59.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
+    "@types/uuid": "^10.0.0",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   }
