--- a/chat-ai-api/package.json
+++ b/chat-ai-api/package.json
@@ -14,8 +14,10 @@
   "license": "ISC MIT",
   "description": "Backend for chat-ai app",
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.41.0",
     "express": "^5.1.0",
     "openai": "^4.93.0",
     "stream-chat": "^8.59.0",
@@ -26,6 +28,7 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
     "@types/uuid": "^10.0.0",
+    "drizzle-kit": "^0.30.6",
     "tsx": "^4.19.3",
     "typescript": "^5.8.3"
   }
